--- a/04 - Convolutional Neural Network/code/01 - CNN.ipynb
+++ b/04 - Convolutional Neural Network/code/01 - CNN.ipynb
@@ -23,7 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "57626a2d",
+   "id": "bf684e51",
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "a17278c2",
+   "id": "d5a1122b",
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6ddba1df",
+   "id": "76a35fdc",
    "metadata": {},
    "source": [
     "## Visualize the food images"
@@ -84,7 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "6b2233d4",
+   "id": "058426ac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "9c505700",
+   "id": "ff302ac0",
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "81e52474",
+   "id": "29d119c4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +148,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "c9acbc7d",
+   "id": "b93edcd4",
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "ffbddd1c",
+   "id": "f7511e86",
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3391e225",
+   "id": "7e0f6d30",
    "metadata": {},
    "source": [
     "> Reason why `img` is returned in the function is that when `mpimg` read the image, it is turned to numpy array."
@@ -215,7 +215,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "75c03d37",
+   "id": "712bcdf2",
    "metadata": {},
    "outputs": [
     {
@@ -284,7 +284,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "05bbbafa",
+   "id": "02cfd841",
    "metadata": {},
    "outputs": [
     {
@@ -352,9 +352,243 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e642b94d",
+   "metadata": {},
+   "source": [
+    "**Note:** Many machine learning models, including neural network prefer the values they work with to be between 0 and 1. Knowing this, one of the most common preprocessing steps for working is to **scale (normalize)** their pixel values by dividing the image arrays by 255. (Since 255 is the maximum pixel value)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "18fd0c9c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[0.5372549 , 0.51764706, 0.2       ],\n",
+       "        [0.50588235, 0.48627451, 0.16862745],\n",
+       "        [0.4745098 , 0.45490196, 0.1372549 ],\n",
+       "        ...,\n",
+       "        [0.34509804, 0.30196078, 0.21568627],\n",
+       "        [0.34901961, 0.30196078, 0.20784314],\n",
+       "        [0.35294118, 0.30588235, 0.21176471]],\n",
+       "\n",
+       "       [[0.4745098 , 0.44705882, 0.14117647],\n",
+       "        [0.48627451, 0.45882353, 0.15294118],\n",
+       "        [0.50980392, 0.48235294, 0.17647059],\n",
+       "        ...,\n",
+       "        [0.33333333, 0.30196078, 0.21960784],\n",
+       "        [0.32941176, 0.29803922, 0.20784314],\n",
+       "        [0.3372549 , 0.29411765, 0.20784314]],\n",
+       "\n",
+       "       [[0.44705882, 0.41568627, 0.12156863],\n",
+       "        [0.4627451 , 0.43137255, 0.1372549 ],\n",
+       "        [0.48627451, 0.45490196, 0.16078431],\n",
+       "        ...,\n",
+       "        [0.30196078, 0.29411765, 0.21176471],\n",
+       "        [0.31764706, 0.29803922, 0.21960784],\n",
+       "        [0.31764706, 0.29803922, 0.21960784]],\n",
+       "\n",
+       "       ...,\n",
+       "\n",
+       "       [[0.71764706, 0.74509804, 0.48235294],\n",
+       "        [0.72156863, 0.74901961, 0.48627451],\n",
+       "        [0.71764706, 0.74509804, 0.48235294],\n",
+       "        ...,\n",
+       "        [0.3254902 , 0.2627451 , 0.03137255],\n",
+       "        [0.31764706, 0.25490196, 0.02352941],\n",
+       "        [0.31372549, 0.25098039, 0.01960784]],\n",
+       "\n",
+       "       [[0.69019608, 0.71764706, 0.45490196],\n",
+       "        [0.70196078, 0.72941176, 0.46666667],\n",
+       "        [0.69803922, 0.7254902 , 0.4627451 ],\n",
+       "        ...,\n",
+       "        [0.3254902 , 0.2627451 , 0.03137255],\n",
+       "        [0.32156863, 0.25882353, 0.02745098],\n",
+       "        [0.31764706, 0.25490196, 0.02352941]],\n",
+       "\n",
+       "       [[0.67843137, 0.70588235, 0.44313725],\n",
+       "        [0.69019608, 0.71764706, 0.45490196],\n",
+       "        [0.6745098 , 0.69803922, 0.44705882],\n",
+       "        ...,\n",
+       "        [0.31764706, 0.25490196, 0.01960784],\n",
+       "        [0.31372549, 0.25098039, 0.01960784],\n",
+       "        [0.31372549, 0.25098039, 0.01960784]]])"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Get all the pixel values between 0 and 1\n",
+    "img / 255."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e0cf2be2",
+   "metadata": {},
+   "source": [
+    "## An end-to-end Example\n",
+    "\n",
+    "Let's build a convolutional neural network to find patterns in our images, more specifically we are to:\n",
+    "- Load our images\n",
+    "- Preprocess our images\n",
+    "- Build our CNN to find patterns\n",
+    "- Compile our CNN\n",
+    "- Fit the CNN to our training data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "5bb81f25",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import libraries\n",
+    "import tensorflow as tf\n",
+    "from tensorflow.keras.preprocessing.image import ImageDataGenerator"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "f138d9f4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 1500 images belonging to 2 classes.\n",
+      "Found 500 images belonging to 2 classes.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Set the seed\n",
+    "tf.random.set_seed(42)\n",
+    "\n",
+    "# Preprocess the data (Scaling)\n",
+    "train_datagen = ImageDataGenerator(rescale=1./255)\n",
+    "valid_datagen = ImageDataGenerator(rescale=1./255)\n",
+    "\n",
+    "# Set path to the data directory\n",
+    "train_dir = \"../pizza_steak/train\"\n",
+    "test_dir = \"../pizza_steak/test\"\n",
+    "\n",
+    "# Import data from directories and turn it into batches\n",
+    "train_data = train_datagen.flow_from_directory(directory=train_dir, \n",
+    "                                               batch_size=32, \n",
+    "                                               target_size=(224,224), \n",
+    "                                               class_mode=\"binary\", seed=42)\n",
+    "\n",
+    "valid_data = valid_datagen.flow_from_directory(directory=test_dir, \n",
+    "                                               batch_size=32, \n",
+    "                                               target_size=(224, 224), \n",
+    "                                               class_mode=\"binary\", seed=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "132d3be0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "47"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(train_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "dca3ee60",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "46.875"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1500 / 32 # 32 is the batch size"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "e485a55b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/5\n",
+      "47/47 [==============================] - 41s 844ms/step - loss: 0.6063 - accuracy: 0.6613\n",
+      "Epoch 2/5\n",
+      "47/47 [==============================] - 44s 927ms/step - loss: 0.4682 - accuracy: 0.7960\n",
+      "Epoch 3/5\n",
+      "47/47 [==============================] - 44s 935ms/step - loss: 0.4026 - accuracy: 0.8287\n",
+      "Epoch 4/5\n",
+      "47/47 [==============================] - 44s 930ms/step - loss: 0.3871 - accuracy: 0.8393\n",
+      "Epoch 5/5\n",
+      "47/47 [==============================] - 44s 939ms/step - loss: 0.3257 - accuracy: 0.8640\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Build a CNN model (same as the Tiny VGG on the CNN explainer website)\n",
+    "model_1 = tf.keras.Sequential([\n",
+    "    # VGG -> Notice 2 Conv2D and 1 MaxPooling2D\n",
+    "    tf.keras.layers.Conv2D(filters=10, \n",
+    "                           kernel_size=3, \n",
+    "                           activation='relu', \n",
+    "                           input_shape=(224, 224, 3)),\n",
+    "    tf.keras.layers.Conv2D(10, 3, activation='relu'),\n",
+    "    tf.keras.layers.MaxPooling2D(pool_size=2, padding=\"valid\"),\n",
+    "    tf.keras.layers.Conv2D(10, 3, activation=\"relu\"),\n",
+    "    tf.keras.layers.Conv2D(10, 3, activation=\"relu\"),\n",
+    "    tf.keras.layers.MaxPooling2D(2),\n",
+    "    # Flatten the images before the output layer\n",
+    "    tf.keras.layers.Flatten(),\n",
+    "    tf.keras.layers.Dense(1, activation=\"sigmoid\")\n",
+    "])\n",
+    "\n",
+    "# Compile the model\n",
+    "model_1.compile(loss=\"binary_crossentropy\", optimizer=\"adam\", metrics=['accuracy'])\n",
+    "\n",
+    "# Fit the model\n",
+    "history_1 = model_1.fit(train_data, epochs=5, steps_per_epoch=len(train_data))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "37d0db9e",
+   "id": "bbce0732",
    "metadata": {},
    "outputs": [],
    "source": []
